syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.service1";
option java_outer_classname = "Service1Impl";

package service1;

// Interface exported by the server.
service Service1 {
  
  rpc service1_do(RequestMessage) returns (ResponseMessage) {}
    
}

message RequestMessage {
  string username = 1;
  string password = 2;
}

message ResponseMessage {
  int32 code = 1;
}
