syntax = "proto3";

option java_multiple_files = true;
option java_package = "Login.client.ds.service2";
option java_outer_classname = "Service2Impl";

package service2;

// Interface exported by the server.
service Service2 {
  
  rpc service2_do(AppointmentRequest) returns (ResponseMessage) {}
    
}

message AppointmentRequest{
  repeated Appointment appointments = 1;
}

message Appointment {
  int32 id=1;
  string title=2;
  string detail=3;
  int64 occurTime=4;

}

message ResponseMessage {
  int32 code = 1;
}
